--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "test": "eslint-find-rules --unused --deprecated"
   },
   "devDependencies": {
-    "eslint-find-rules": "^3.6.1",
-    "eslint": "^7.20.0"
+    "eslint": "^7.23.0",
+    "eslint-find-rules": "^3.6.1"
   },
   "peerDependencies": {
-    "eslint": "^7.20.0"
+    "eslint": "^7.23.0"
   }
 }
