--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "version": "4.0.1",
   "author": "Domenic Denicola <d@domenic.me> (https://domenic.me/)",
   "license": "Apache-2.0",
-  "repository": "domenic/eslint-config",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/domenic/eslint-config.git"
+  },
   "main": "index.mjs",
   "files": [
     "index.mjs"
